--- a/framework/less/misc.less
+++ b/framework/less/misc.less
@@ -47,7 +47,7 @@ body {
   }
 }
 *[class*=atk-border-outline] {
-    &, &[class*=atk-swatch]:not(.atk-text-inherit) {
+    &, &[class*=atk-swatch]:not(.atk-text-inherit), &[class*=atk-box] {
         background: none;
         border-width: 0.1em;
         border-style: solid;
