--- a/framework/less/forms.less
+++ b/framework/less/forms.less
@@ -137,6 +137,7 @@ label.atk-input-label {
 // Form Classes
 .atk-form {
     input[type=text]:not([class*="span"]),
+    input[type=email]:not([class*="span"]),
     input[type=password]:not([class*="span"]),
     input[readonly]:not([class*="span"]),
     textarea:not([class*="span"]),
