--- a/framework/less/typography.less
+++ b/framework/less/typography.less
@@ -33,9 +33,9 @@ h1, h2, h3, h4, h5, h6 {
     &:first-child {
         margin-top: 0;
     }
-    + .atk-form {
-        margin-top: @margin;
-    }
+    // + .atk-form {
+    //     margin-top: @margin;
+    // }
 }
 .atk-size-yotta4 {
     font-size: @bodySize * pow(@bodyBaseline,@fontScatter*5.5);
