Rewrote .atk-padding-* component.

--- a/framework/less/agiletoolkit.less
+++ b/framework/less/agiletoolkit.less
@@ -1,6 +1,6 @@
 
 /**
- * Agile CSS Framework (c) 2013–2015 v0.917
+ * Agile CSS Framework (c) 2013–2015 v0.918
  *  http://www4.agiletoolkit.org/css
  */
 
@@ -21,3 +21,4 @@
 @import 'components.less'; /* Helpers, Colors, Boxes, Buttons etc. */
 @import 'responsive.less';
 @import 'variables.less';
+@import 'legacy.less';
