--- a/framework/less/variables.less
+++ b/framework/less/variables.less
@@ -84,6 +84,7 @@
 @textDimmed:           lighten(@bodyColor, 20%);
 
 @inputFocus:           #0095ff;
+@inputFocusGlow:       3px;
 @inputPlaceholder:     lighten(@bodyColor, 40%);
 
 @popoverArrow:        12px;
