--- a/framework/less/forms.less
+++ b/framework/less/forms.less
@@ -2,6 +2,8 @@
 // Forms
 // ==========================================================
 
+@inputPadding: (0.5em * @baselineDestroyer) (0.7em * @baselineDestroyer);
+
 // Basic Fields
 input[readonly],
 div.atk-form-field-readonly {
@@ -32,7 +34,7 @@ textarea {
     box-shadow: 0 3px 0 rgba(0, 0, 0, 0.03) inset;
     color: @bodyColor;
     line-height: @bodyBaseline;
-    padding: (0.5em * @baselineDestroyer) (0.7em * @baselineDestroyer);
+    padding: @inputPadding;
     .placeholder(@inputPlaceholder);
 }
 textarea {
@@ -55,7 +57,7 @@ input[type="reset"]::-moz-focus-inner {
 input[type=text]:focus,
 input[type=password]:focus,
 textarea:focus {
-    @shadow: 0 0 3px fadeout(@inputFocus,30%), 0 0 10px fadeout(@inputFocus,70%);
+    @shadow: 0 0 @inputFocusGlow fadeout(@inputFocus,30%), 0 0 @inputFocusGlow*2 fadeout(@inputFocus,70%);
     border-color: @inputFocus !important;
     .box-shadow(@shadow);
     outline: none;
